Adjust Update Handler and Swagger
