# Tugas-React/backend-tugas-reactjs/app/models/book.go
@@ -8,7 +8,7 @@ type Book struct {
 	Description string    `json:"description" validate:"required"`
 	ImageURL    string    `json:"image_url" validate:"required; url" `
 	ReleaseYear int       `json:"release_year" validate:"required"`
-	Prize       string    `json:"prize" validate:"required"`
+	Price       string    `json:"price" validate:"required"`
 	TotalPage   int       `json:"total_page"`
 	Thickness   string    `json:"thickness"`
 	CreatedAt   time.Time `json:"created_at"`
@@ -16,11 +16,10 @@ type Book struct {
 }
 
 type BookRequest struct {
-	Title       string `json:"title"`
-	Description string `json:"description"`
-	ImageURL    string `json:"image_url"`
-	ReleaseYear int    `json:"release_year"`
-	Prize       string `json:"prize"`
+	Title       string `json:"title" validate:"required"`
+	Description string `json:"description" validate:"required"`
+	ImageURL    string `json:"image_url" validate:"required; url" `
+	ReleaseYear int    `json:"release_year" validate:"required"`
+	Price       string `json:"price" validate:"required"`
 	TotalPage   int    `json:"total_page"`
-	Thickness   string `json:"thickness"`
 }
